# photo-shorter

./: README.md  main.py  pyproject.toml
src/photo_shorter/: __init__.py
