[project]
name = "photo-shorter"
version = "0.1.0"
description = "Image Shorter/Picker"
authors = [
    {name = "bodrooo",email = "bodroadikoro345@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy (>=2.3.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "photo_shorter", from = "src"}]

[tool.poetry.scripts]
main = 'main:main'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
